--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -1,13 +1,4 @@
-import init.vigor.usb.rc
-
-on early-init
-    mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/emmc 0000 system system
-    # for backwards compatibility
-    symlink /mnt/sdcard /sdcard
-    symlink /mnt/emmc /emmc
-
-on emmc-fs
+on early-fs
     mkdir /system
     mkdir /data 0771 system system
     mkdir /cache 0771 system cache
@@ -17,7 +8,7 @@ on emmc-fs
     mount ext4 /dev/block/mmcblk0p35 /data wait noatime nosuid nodev data=ordered noauto_da_alloc
     mount ext4 /dev/block/mmcblk0p36 /cache wait noatime nosuid nodev data=ordered noauto_da_alloc
     mount ext4 /dev/block/mmcblk0p30 /devlog wait noatime nosuid nodev data=ordered noauto_da_alloc
-    
+
     # 8x60: mount radio partition and create links for modem/q6 firmwares
     rm /vendor
     mkdir /vendor               0771 system system
@@ -67,33 +58,27 @@ on emmc-fs
 
     symlink /system/vendor/etc/audio_effects.conf /vendor/etc/audio_effects.conf
 
-on post-fs-data
+on post-fs
     wait /dev/ttyHSL1
     mkdir /data/qcks 0770 system system
 
+
+on early-init
+    mkdir /mnt/sdcard 0000 system system
+    mkdir /mnt/emmc 0000 system system
+    # for backwards compatibility
+    symlink /mnt/sdcard /sdcard
+    symlink /mnt/emmc /emmc
+
+    export EXTERNAL_STORAGE /mnt/sdcard
+    export SECONDARY_STORAGE /mnt/emmc
+
+    device /dev/block/mmcblk0p16 0460 radio diag
+
+on init
     # double check the perms and set owner
     chown root root /devlog
     chmod 0700 /devlog
-
-    mount rootfs rootfs / remount
-
-    # wifi
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wifi/hostapd 0770 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-
-    # audio
-    mkdir /data/audio 0770 media audio
-
-    # radio
-    mkdir /data/radio 0770 radio radio
-    chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
-    chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
-
-    # gpsone
-    mkdir /data/misc/gpsone_d 0770 system system
 
     # for Invense MPU3050
     chmod 0664 /dev/mpu
@@ -103,130 +88,135 @@ on post-fs-data
     chown system system /dev/mpuirq
     chown system system /dev/timerirq
 
-    # Set indication (checked by vold) that we have finished this action
-    setprop vold.post_fs_done 1
+    symlink /mnt/sdcard/ext_sd /sdcard2
 
-on init
+on boot
+# +HTC_RIL: from QCT Fusion
+    mkdir /data/radio 0770 radio radio
+    chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
+    chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
+# -HTC_RIL: from QCT Fusion
+
+    mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
+    mkdir /data/d 0777 system system
+    mount debugfs /data/d /data/d
+
+    # for universal log tool
+    mkdir /data/misc/cw 0770 system system
+
+# I-Mz add for SVLTE GPS daemon and related folder from QCT fusion ++
+    mkdir /data/misc/gpsone_d 0770 system qcom_oncrpc
+#   chown system system /system/bin/gpsone_daemon
+# I-Mz add for SVLTE GPS daemon and related folder from QCT fusion --
+
     # bluetooth power up/down interface
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chmod 0660                /sys/class/rfkill/rfkill0/state
+    
+    # Widevine DRM
+	chown drm system /dev/htcdrm
+	chmod 0660 /dev/htcdrm
 
-    # bluetooth MAC address programming
-    chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddr
-    setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddr
+	# for power state stats
+	chown radio system /sys/power/power_state_start
+	chown radio system /sys/power/power_state_end
+	chown radio system /sys/power/power_state_trigger
+	chmod 0660 /sys/power/power_state_start
+	chmod 0660 /sys/power/power_state_end
+	chmod 0660 /sys/power/power_state_trigger
 
-    # Permissions for Liblights.
+	# for modem link
+	chown system system /sys/class/android_usb/f_modem/on
+	chown system system /dev/ttyHSUSB0
+	chown system system /dev/ttySA0
+	chown system system /dev/smd9
+
+	# for diagnostic
+	chown system system /sys/class/android_usb/f_diag/on
+
+	# for rmnet
+	 chown system system /sys/class/android_usb/f_rmnet/on
+
+	# for Flip to speaker
+	chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
+	chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
+
+	# for Optical sensors
+	chown system system /sys/class/optical_sensors/lightsensor/ls_adc
+	chown system system /sys/class/optical_sensors/lightsensor/ls_auto
+	chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
+	chown system radio /sys/class/optical_sensors/proximity/ps_adc
+	chown system system /sys/class/optical_sensors/proximity/ps_kadc
+	chown system system /sys/class/optical_sensors/proximity/ps_led
+	chown system system /sys/class/optical_sensors/proximity/ps_test_mode
+
+        # for simlock
+        chown radio radio /dev/simlock
+        chmod 0660 /dev/simlock
+
+	# for charging function
+	chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
+	chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
+
+    # Load bcmdhd.ko while booting
+    insmod /system/lib/modules/bcmdhd.ko
+
+# HTC SSD Peripheral UI - BEGIN
+    chown system system /sys/class/leds/red/brightness
+    chown system system /sys/class/leds/red/blink
+    chown system system /sys/class/leds/red/off_timer
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/green/blink
+    chown system system /sys/class/leds/green/off_timer
+    chown system system /sys/class/leds/blue/brightness
+    chown system system /sys/class/leds/blue/blink
+    chown system system /sys/class/leds/blue/off_timer
     chown system system /sys/class/leds/amber/brightness
     chown system system /sys/class/leds/amber/blink
-    chown system system /sys/class/leds/button-backlight/brightness
-    chown system system /sys/class/leds/lcd-backlight/brightness
+    chown system system /sys/class/leds/amber/off_timer
+    chown system system /sys/class/leds/button-backlight-portrait/brightness
+    chown system system /sys/class/leds/button-backlight-landscape/brightness
+    chown system system /sys/class/leds/amber-portrait/brightness
+    chown system system /sys/class/leds/green-portrait/brightness
+    chown system system /sys/class/leds/blue-portrait/brightness
+    chown system system /sys/class/leds/amber-landscape/brightness
+    chown system system /sys/class/leds/green-landscape/brightness
+    chown system system /sys/class/leds/blue-landscape/brightness
+    chown system system /sys/class/leds/sharekey/brightness
+    chown system system /sys/class/leds/sharekey/breath_times
+    chown system system /sys/class/leds/sharekey/breath_max_brightness
+    chown system system /sys/class/leds/charming-led/brightness
+    chown system system /sys/class/leds/charming-led/blink
+    chown system system /sys/class/leds/charming-led/off_timer
+    chown system system /sys/class/leds/flashlight/brightness
+    chown system system /sys/class/leds/caps/brightness
+    chown system system /sys/class/leds/func/brightness
+    chown media media /sys/class/leds/green-camera/brightness
+    chown system system /sys/devices/virtual/htc_accessory/fm/flag
+    chown system system /sys/devices/virtual/htc_accessory/tty/flag
+    chown system system /sys/class/switch/dock/dmb_wakeup
+# HTC SSD Peripheral UI - END
 
-    # flashlight
-    chown system camera /sys/class/leds/flashlight/brightness
-    chmod 0666          /sys/class/leds/flashlight/brightness
+# HTC SSD Peripheral Touch - START
+    chown system system /sys/android_touch/unlock
+# HTC SSD Peripheral UI -END
 
-    # symlink for HDMI
-    symlink /dev/graphics/fb1 /dev/graphics/hdmi
+# HTC SSD USB
+    chown system system /sys/class/android_usb/f_modem/on
+    chown system system /sys/class/android_usb/f_diag/on
+    chown system system /sys/class/android_usb/f_rmnet/on
 
-    # for wireless modem
-    chown system system /sys/module/serial/parameters/modem_enabled
-    chown system system /dev/ttyHSUSB0
-    chown system system /dev/ttySA0
-    chown system system /dev/smd9
-
-    # for Flip to speaker
-    chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
-    chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
-
-    # for Optical sensors
-    chown system system /sys/class/optical_sensors/lightsensor/ls_adc
-    chown system system /sys/class/optical_sensors/lightsensor/ls_auto
-    chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
-    chown system radio /sys/class/optical_sensors/proximity/ps_adc
-    chown system system /sys/class/optical_sensors/proximity/ps_kadc
-    chown system system /sys/class/optical_sensors/proximity/ps_led
-    chown system system /sys/class/optical_sensors/proximity/ps_test_mode
-
-    # for CM performance
-    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_frequencies
-    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_governors
-    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq
-    chown root system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
-
-    # for simlock
-    chown radio radio /dev/simlock
-    chmod 0660 /dev/simlock
-
-    # for charging function
-    chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
-    chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
-    chown radio radio /sys/class/power_supply/battery/charger_control
-    chmod 0660 /sys/class/power_supply/battery/charger_control
-    chown radio /sys/class/power_supply/battery/charger_timer
+# HTC SSD Battery - BEGIN
+# for RIL to notify battery driver talking and network_search state
     chown radio radio /sys/class/power_supply/battery/phone_call
-    chown radio radio /sys/class/power_supply/battery/network_search
+# HTC SSD Battery - END
 
-    chown system /sys/devices/platform/rs300000a7.65536/force_sync
-    chown system /sys/devices/platform/rs300000a7.65536/sync_sts
-    chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
-
-    # Chown polling nodes as needed from UI running on system server
-    chown system system /persist
-    chmod 0771 /persist
-    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
-    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
-    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
-    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
-    chown system system /sys/devices/platform/msm_sdcc.1/polling
-    chown system system /sys/devices/platform/msm_sdcc.2/polling
-    chown system system /sys/devices/platform/msm_sdcc.3/polling
-    chown system system /sys/devices/platform/msm_sdcc.4/polling
-
-    # Overwrite framework low memory killer setting
-    write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,8192,12288
-    write /sys/module/lowmemorykiller/parameters/minfile 2048,3072,4096,6144,8192,12288
-    write /sys/module/lowmemorykiller/parameters/check_filepages 1
-
-on boot
-    # allow interfaces to get v6 address when tethering is enabled
-    write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet7/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
-
-    # Define TCP buffer sizes for various networks
-    setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
-    setprop net.tcp.buffersize.wifi    4096,221184,3461120,4096,221184,3461120
-    setprop net.tcp.buffersize.hsdpa   4094,87380,704512,4096,16384,110208
-    setprop net.tcp.buffersize.umts    4094,87380,704512,4096,16384,110208
-    setprop net.tcp.buffersize.edge    4093,26280,704512,4096,16384,35040
-    setprop net.tcp.buffersize.gprs    4092,8760,704512,4096,8760,11680
-    setprop net.tcp.buffersize.lte     4096,221184,3461120,4096,221184,3461120
-    setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
-    setprop net.tcp.buffersize.wimax   4096,1398102,2097152,4096,16384,110208
-
-    # Assign TCP buffer thresholds to be ceiling value of technology maximums
-    # Increased technology maximums should be reflected here.
-    write /proc/sys/net/core/rmem_max  3461120
-    write /proc/sys/net/core/wmem_max  3461120
-
-    # for slate charging timer
-    chown radio /sys/class/power_supply/battery/charger_timer
+# for bridgemgr to inform the USB driver of the correct transport
+    chown radio radio /sys/class/android_usb/f_rmnet/transport
 
 # Force loading of modem and Q6 images
 service load-modem /system/bin/load-modem.sh
@@ -237,49 +227,35 @@ service kickstart /system/bin/qcks lc
     class main
     oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant \
-    -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
-    class main
-    socket wpa_eth0 dgram 0660 wifi wifi
+service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -puse_p2p_group_interface=1
+#   we will start as root and wpa_supplicant will switch to user wifi
+#   after setting up the capabilities required for WEXT
+#   user wifi
+#   group wifi inet keystore
+    socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
 
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-    class main
-    disabled
-    oneshot
+	class main
+	disabled
+	oneshot
 
-service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
-    class main
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
+service iprenew_wlan0 /system/bin/dhcpcd -n
+	class main
+	disabled
+	oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-service iprenew_bnep0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-# bugreport is triggered by the KEY_VOLUMEUP and KEY_VOLUMEDOWN keycodes
-service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
-    class late_start
-    disabled
-    oneshot
-    keycodes 114 115
+	class main
+	disabled
+	oneshot
 
 # Make sure we startup btld before hcid
 # Set target address to emulator host loopback IF
@@ -292,26 +268,26 @@ service btld /system/bin/btld -lpm 1 -hb 3000000
 
 # for USB internet sharing
 service udhcpd /system/bin/udhcpd
-    disabled
-    oneshot
+	disabled
+	oneshot
 
 service netsharing_on /system/bin/netsharing net on
-    disabled
-    oneshot
+	disabled
+	oneshot
 
 service netsharing_off /system/bin/netsharing net off
-    disabled
-    oneshot
+	disabled
+	oneshot
 
 service netsharing_pass /system/bin/netsharing net_pass on
-    disabled
-    oneshot
+	disabled
+	oneshot
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p19 NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblk0p20
     class core
     user root
 
-service dmagent /system/bin/dmagent -N -P19 -VSY
+service dmagent /system/bin/dmagent -N -P19 -SA -VSY
     socket dmagent stream 660 root radio
     user root
     group radio cache inet misc
@@ -322,20 +298,15 @@ service modem /system/xbin/wireless_modem
     group system radio
     disabled
 
+# for modem link
 on property:service.modem.enable=1
-    start modem
+	start modem
 
+# for modem link
 on property:service.modem.enable=0
-    stop modem
+	stop modem
 
-service hdmid /system/bin/hdmid
-    class late_start
-    socket hdmid stream 0660 root system graphics
-    disabled
-
-on property:ro.hdmi.enable=true
-    start hdmid
-
+#+HTC_RIL: from QCT Fusion
 service bridgemgrd /system/bin/bridgemgrd
     class main
     user radio
@@ -350,61 +321,61 @@ service qmuxd /system/bin/qmuxd
     class late_start
     user radio
     group radio audio bluetooth gps
+    disabled
+
+on property:radio.netmgr_port_close_done=true
+    start qmuxd
 
 service netmgrd /system/bin/netmgrd
     class late_start
 
-on property:ro.use_data_netmgrd=false
-    # netmgr not supported on specific target
-    stop netmgrd
+#-HTC_RIL: from QCT Fusion
+
+service hdmid /system/bin/hdmid
+    class late_start
+    socket displayd stream 0660 root system graphics
 
 service htcbatt /system/bin/htcbatt
     class late_start
     user root
 
-service thermald /system/bin/thermald
+service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
     class main
     user root
-    group root
     disabled
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp --single_core_while_panel_off
+service thermald /system/bin/thermald
     class main
     user root
     disabled
 
 on property:init.svc.bootanim=stopped
     start qcom-post-boot
-
-service gpsone_daemon /system/bin/gpsone_daemon
-    class main
-    user root
-    group radio audio bluetooth gps
+    start thermald
+    start mpdecision
 
 service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
-    class main
     user root
     disabled
+    oneshot
 
-service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7 -n 10 -N 10
+service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7
     user root
     disabled
     oneshot
     ioprio idle 0
 
-service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k -n 10 -N 10
+service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
     user root
     disabled
     oneshot
     ioprio idle 0
+
+service tpd /sbin/tpd
+    user root
 
 on property:ro.build.tags=test-keys
     start htc_ebdlogd
 
 on property:ro.build.tags=release-keys
     start htc_ebdlogd_rel
-
-on property:sys.radio.shutdown=true
-    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
-    user root
-    group root
