--- a/ramdisk/ueventd.vigor.rc
+++ b/ramdisk/ueventd.vigor.rc
@@ -7,6 +7,7 @@
 /dev/genlock              0666   root      root
 
 # gpu driver for adreno200 is globally accessible
+/dev/kgsl		  0666   root	    root
 /dev/kgsl-3d0             0666   root       root
 /dev/kgsl-2d0             0666   root       root
 /dev/kgsl-2d1             0666   root       root
