--- a/ramdisk/ueventd.vigor.rc
+++ b/ramdisk/ueventd.vigor.rc
@@ -1,10 +1,5 @@
 /dev/rtc0                 0600   system     system
 
-/dev/mpu                  0664   system     system
-/dev/mpuirq               0664   system     system
-/dev/timerirq             0664   system     system
-/dev/simlock              0660   radio      radio
-
 # the DIAG device node is world writable/readable.
 /dev/diag                 0666   root       root
 
@@ -15,14 +10,17 @@
 /dev/kgsl		  0666   root	    root
 /dev/kgsl-3d0             0666   root       root
 /dev/kgsl-2d0             0666   root       root
+/dev/kgsl-3d0           0666    root        root
 /dev/kgsl-2d1             0666   root       root
-
+/dev/genlock            0666    root        root
+/dev/ion                0664    system      system
 /dev/ttyMSM0              0600   bluetooth  bluetooth
 /dev/ttyHS0               0600   bluetooth  bluetooth
 /dev/ttyGS0               0660   system     system
 /dev/uinput               0660   system     bluetooth
 /dev/sdio_tty_ciq_00      0660   system     system
 /dev/msm_rotator          0660   system     graphics
+/dev/pmem               0660    system      graphics
 /dev/pmem_audio           0660   system     audio
 /dev/pmem_smipool*        0660   system     camera
 /dev/oncrpc/*             0660   radio      system
