--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -1,15 +1,17 @@
 import init.vigor.usb.rc
 
-on early-fs
-    mkdir /system
-    mkdir /data 0771 system system
-    mkdir /cache 0771 system cache
-    mkdir /devlog 0700 root root
+on early-init
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/sdcard1 0000 system system
+    # for backwards compatibility
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard1 /emmc
+    symlink /storage/sdcard1 /mnt/emmc
 
-    mount ext4 /dev/block/mmcblk0p29 /system wait ro data=ordered noauto_da_alloc
-    mount ext4 /dev/block/mmcblk0p35 /data wait noatime nosuid nodev data=ordered noauto_da_alloc
-    mount ext4 /dev/block/mmcblk0p36 /cache wait noatime nosuid nodev data=ordered noauto_da_alloc
-    mount ext4 /dev/block/mmcblk0p30 /devlog wait noatime nosuid nodev data=ordered noauto_da_alloc
+    export EXTERNAL_STORAGE /storage/sdcard0
+    export SECONDARY_STORAGE /storage/sdcard1
 
     # 8x60: mount radio partition and create links for modem/q6 firmwares
     rm /vendor
@@ -20,9 +22,12 @@ on early-fs
     mkdir /vendor/firmware/adsp 0771 system system
     mkdir /vendor/firmware/misc_mdm 0771 system system
 
-    mount vfat /dev/block/mmcblk0p17 /vendor/firmware/misc wait ro shortname=lower
-    mount vfat /dev/block/mmcblk0p21 /vendor/firmware/adsp wait ro shortname=lower
-    mount vfat /dev/block/mmcblk0p18 /vendor/firmware/misc_mdm wait ro shortname=lower
+    wait /dev/block/mmcblk0p17
+    wait /dev/block/mmcblk0p21
+    wait /dev/block/mmcblk0p18
+    mount vfat /dev/block/mmcblk0p17 /vendor/firmware/misc ro shortname=lower
+    mount vfat /dev/block/mmcblk0p21 /vendor/firmware/adsp ro shortname=lower
+    mount vfat /dev/block/mmcblk0p18 /vendor/firmware/misc_mdm ro shortname=lower
 
     symlink /vendor/firmware/adsp/q6.b09 /vendor/firmware/q6.b09
     symlink /vendor/firmware/adsp/q6.b08 /vendor/firmware/q6.b08
@@ -58,31 +63,11 @@ on early-fs
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
-    symlink /system/vendor/etc/audio_effects.conf /vendor/etc/audio_effects.conf
-
-on post-fs
-    wait /dev/ttyHSL1
-    mkdir /data/qcks 0770 system system
-
-on post-fs-data
-    chown system system /sys/class/graphics/fb0/ratelimit
-
-on early-init
-    mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/emmc 0000 system system
-    # for backwards compatibility
-    symlink /mnt/sdcard /sdcard
-    symlink /mnt/emmc /emmc
-
-    export EXTERNAL_STORAGE /mnt/sdcard
-    export SECONDARY_STORAGE /mnt/emmc
-
-    device /dev/block/mmcblk0p16 0460 radio diag
+    # Force loading of modem and Q6 images
+    write /dev/smd_pkt_loopback 1
 
 on init
-    # double check the perms and set owner
-    chown root root /devlog
-    chmod 0700 /devlog
+    mkdir /devlog 0700 root root
 
     # for Invense MPU3050
     chmod 0664 /dev/mpu
@@ -94,7 +79,27 @@ on init
 
     symlink /mnt/sdcard/ext_sd /sdcard2
 
+on emmc-fs
+    # mount all mmc partitions
+    mount_all /fstab.vigor
+
+    setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
+
+    mkdir /vendor/etc 0771 system system
+    symlink /system/vendor/etc/audio_effects.conf /vendor/etc/audio_effects.conf
+
+on post-fs-data
+    # double check the perms and set owner
+    chown root root /devlog
+    chmod 0700 /devlog
+
+    # Set indication (checked by vold) that we have finished this action
+    setprop vold.post_fs_data_done 1
+
 on boot
+    # for systrace
+    mount debugfs /sys/kernel/debug /sys/kernel/debug
+
     # Chown polling nodes as needed from UI running on system server
     chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
@@ -104,6 +109,7 @@ on boot
     chown system system /sys/devices/platform/msm_sdcc.2/polling
     chown system system /sys/devices/platform/msm_sdcc.3/polling
     chown system system /sys/devices/platform/msm_sdcc.4/polling
+
     # bluetooth power up/down interface
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
@@ -113,11 +119,22 @@ on boot
     chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
     setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
 
-# +HTC_RIL: from QCT Fusion
-    mkdir /data/radio 0770 radio radio
-    chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
-    chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
-# -HTC_RIL: from QCT Fusion
+    # for power state stats	
+    chown radio system /sys/power/power_state_start
+    chown radio system /sys/power/power_state_end
+    chown radio system /sys/power/power_state_trigger
+    chmod 0660 /sys/power/power_state_start
+    chmod 0660 /sys/power/power_state_end
+    chmod 0660 /sys/power/power_state_trigger
+
+    # for modem link
+    chown system system /sys/class/android_usb/f_modem/on
+    chown system system /dev/ttyHSUSB0
+    chown system system /dev/ttySA0
+    chown system system /dev/smd9
+
+    wait /dev/ttyHSL1
+    mkdir /data/qcks 0770 system system
 
     # wifi
     mkdir /data/misc 1771 system misc
@@ -125,134 +142,81 @@ on boot
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/d 0777 system system
-    mount debugfs /data/d /data/d
 
-    # for universal log tool
-    mkdir /data/misc/cw 0770 system system
+    insmod /system/lib/modules/bcmdhd.ko
 
-# I-Mz add for SVLTE GPS daemon and related folder from QCT fusion ++
-    mkdir /data/misc/gpsone_d 0770 system qcom_oncrpc
-#   chown system system /system/bin/gpsone_daemon
-# I-Mz add for SVLTE GPS daemon and related folder from QCT fusion --
-    
-    # Widevine DRM
-	chown drm system /dev/htcdrm
-	chmod 0660 /dev/htcdrm
+    # symlink for HDMI
+    symlink /dev/graphics/fb1 /dev/graphics/hdmi
 
-	# for power state stats
-	chown radio system /sys/power/power_state_start
-	chown radio system /sys/power/power_state_end
-	chown radio system /sys/power/power_state_trigger
-	chmod 0660 /sys/power/power_state_start
-	chmod 0660 /sys/power/power_state_end
-	chmod 0660 /sys/power/power_state_trigger
+    # audio
+    mkdir /data/audio 2770 media audio
 
-	# for modem link
-	chown system system /sys/class/android_usb/f_modem/on
-	chown system system /dev/ttyHSUSB0
-	chown system system /dev/ttySA0
-	chown system system /dev/smd9
+    # radio
+    mkdir /data/radio 2770 radio radio
 
-	# for diagnostic
-	chown system system /sys/class/android_usb/f_diag/on
-
-	# for rmnet
-	 chown system system /sys/class/android_usb/f_rmnet/on
-
-	# for Flip to speaker
-	chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
-	chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
-
-	# for Optical sensors
-	chown system system /sys/class/optical_sensors/lightsensor/ls_adc
-	chown system system /sys/class/optical_sensors/lightsensor/ls_auto
-	chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
-	chown system radio /sys/class/optical_sensors/proximity/ps_adc
-	chown system system /sys/class/optical_sensors/proximity/ps_kadc
-	chown system system /sys/class/optical_sensors/proximity/ps_led
-	chown system system /sys/class/optical_sensors/proximity/ps_test_mode
-
-        # for simlock
-        chown radio radio /dev/simlock
-        chmod 0660 /dev/simlock
-
-	# for charging function
-	chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
-	chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
-
-# HTC SSD Peripheral UI - BEGIN
-    chown system system /sys/class/leds/red/brightness
-    chown system system /sys/class/leds/red/blink
-    chown system system /sys/class/leds/red/off_timer
+    # liblights
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/green/blink
-    chown system system /sys/class/leds/green/off_timer
-    chown system system /sys/class/leds/blue/brightness
-    chown system system /sys/class/leds/blue/blink
-    chown system system /sys/class/leds/blue/off_timer
     chown system system /sys/class/leds/amber/brightness
     chown system system /sys/class/leds/amber/blink
-    chown system system /sys/class/leds/amber/off_timer
-    chown system system /sys/class/leds/button-backlight-portrait/brightness
-    chown system system /sys/class/leds/button-backlight-landscape/brightness
-    chown system system /sys/class/leds/amber-portrait/brightness
-    chown system system /sys/class/leds/green-portrait/brightness
-    chown system system /sys/class/leds/blue-portrait/brightness
-    chown system system /sys/class/leds/amber-landscape/brightness
-    chown system system /sys/class/leds/green-landscape/brightness
-    chown system system /sys/class/leds/blue-landscape/brightness
-    chown system system /sys/class/leds/sharekey/brightness
-    chown system system /sys/class/leds/sharekey/breath_times
-    chown system system /sys/class/leds/sharekey/breath_max_brightness
-    chown system system /sys/class/leds/charming-led/brightness
-    chown system system /sys/class/leds/charming-led/blink
-    chown system system /sys/class/leds/charming-led/off_timer
-    chown system system /sys/class/leds/flashlight/brightness
-    chown system system /sys/class/leds/caps/brightness
-    chown system system /sys/class/leds/func/brightness
-    chown media media /sys/class/leds/green-camera/brightness
-    chown system system /sys/devices/virtual/htc_accessory/fm/flag
-    chown system system /sys/devices/virtual/htc_accessory/tty/flag
-    chown system system /sys/class/switch/dock/dmb_wakeup
-# HTC SSD Peripheral UI - END
+    chown system system /sys/class/leds/button-backlight/brightness
+    chown system system /sys/class/leds/lcd-backlight/brightness
 
-# HTC SSD Peripheral Touch - START
-    chown system system /sys/android_touch/unlock
-# HTC SSD Peripheral UI -END
+    # flashlight
+    chown system camera /sys/class/leds/flashlight/brightness
+    chmod 0660          /sys/class/leds/flashlight/brightness
 
-# HTC SSD USB
+    # for optical sensors
+    chown system system /sys/class/optical_sensors/lightsensor/ls_adc
+    chown system system /sys/class/optical_sensors/lightsensor/ls_auto
+    chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
+    chown system radio /sys/class/optical_sensors/proximity/ps_adc
+    chown system system /sys/class/optical_sensors/proximity/ps_kadc
+    chown system system /sys/class/optical_sensors/proximity/ps_led
+    chown system system /sys/class/optical_sensors/proximity/ps_test_mode
+
+    # for charging function
+    chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
+    chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
+
+    # to enable low charge current in voice call
+    chown radio radio /sys/class/power_supply/battery/charger_control
+    chmod 0660 /sys/class/power_supply/battery/charger_control
+
+    # for slate charging timer
+    chown radio /sys/class/power_supply/battery/charger_timer
+
+    # HTC SSD USB
     chown system system /sys/class/android_usb/f_modem/on
     chown system system /sys/class/android_usb/f_diag/on
     chown system system /sys/class/android_usb/f_rmnet/on
 
-# HTC SSD Battery - BEGIN
-# for RIL to notify battery driver talking and network_search state
-    chown radio radio /sys/class/power_supply/battery/phone_call
-# HTC SSD Battery - END
-
-# for bridgemgr to inform the USB driver of the correct transport
+    # for bridgemgr to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet/transport
 
-# Load bcmdhd.ko while booting
-    insmod /system/lib/modules/bcmdhd.ko
+    # for flip to speaker
+    chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
+    chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
 
-# Force loading of modem and Q6 images
-service load-modem /system/bin/load-modem.sh
-    class main
-    oneshot
+    # remove write permissions to video nodes
+    chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
+    chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
+    chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
+
+    # change owner and group for media server and surfaceflinger
+    chown system system /sys/devices/virtual/graphics/fb1/format_3d
+
+    chown system system /sys/devices/platform/panel_3d/3D_mode
+    chmod 0664 /sys/devices/platform/panel_3d/3D_mode
+
+    # sync fs
+    chown system /sys/devices/platform/rs300000a7.65536/force_sync
+    chown system /sys/devices/platform/rs300000a7.65536/sync_sts
+
+# Services start here
 
 service kickstart /system/bin/qcks lc
     class main
-    oneshot
-
-service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -puse_p2p_group_interface=1
-#   we will start as root and wpa_supplicant will switch to user wifi
-#   after setting up the capabilities required for WEXT
-#   user wifi
-#   group wifi inet keystore
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
@@ -260,73 +224,49 @@ service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
-service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-	class main
-	disabled
-	oneshot
+service hciattach /system/bin/brcm_patchram_plus --no2bytes --enable_hci \
+    --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download \
+    --patchram /system/etc/firmware/BCM4330B1_002.001.003.0550.0568.hcd /dev/ttyHS0
+    class main
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+service hdmid /system/bin/hdmid
+    class main
+    socket hdmid stream 0660 root system graphics
+    disabled
+
+service htcbatt /system/bin/htcbatt
+    class main
+    user root
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
-	class main
-	disabled
-	oneshot
+    class main
+    disabled
+    oneshot
 
-service iprenew_p2p /system/bin/dhcpcd -n
-	class main
-	disabled
-	oneshot
-	
-	
-	
+service netmgrd /system/bin/netmgrd
+    class main
+
 service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
     user root
     group wifi inet
     socket wpa_wlan0 dgram 0660 wifi wifi
     disabled
     oneshot
-    
-    
-    
-# for USB internet sharing
-service udhcpd /system/bin/udhcpd
-	disabled
-	oneshot
 
-service netsharing_on /system/bin/netsharing net on
-	disabled
-	oneshot
-
-service netsharing_off /system/bin/netsharing net off
-	disabled
-	oneshot
-
-service netsharing_pass /system/bin/netsharing net_pass on
-	disabled
-	oneshot
-
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p19 NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblk0p20
-    class core
+service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+    class main
     user root
-
-service dmagent /system/bin/dmagent -N -P19 -SA -VSY
-    socket dmagent stream 660 root radio
-    user root
-    group radio cache inet misc
-
-# for modem link
-service modem /system/xbin/wireless_modem
-    user system
-    group system radio
     disabled
 
-# for modem link
-on property:service.modem.enable=1
-	start modem
+#service qcom-sh /system/bin/sh /init.qcom.sh
+#    class core
+#    user root
+#    oneshot
 
-# for modem link
-on property:service.modem.enable=0
-	stop modem
-
-#+HTC_RIL: from QCT Fusion
 service bridgemgrd /system/bin/bridgemgrd
     class main
     user radio
@@ -338,6 +278,11 @@ service qmiproxy /system/bin/qmiproxy
     group radio
 
 service qmuxd /system/bin/qmuxd
+    class main
+    user radio
+    group radio audio bluetooth gps
+
+service qmuxd /system/bin/qmuxd
     class late_start
     user radio
     group radio audio bluetooth gps
@@ -346,58 +291,32 @@ service qmuxd /system/bin/qmuxd
 on property:radio.netmgr_port_close_done=true
     start qmuxd
 
-service netmgrd /system/bin/netmgrd
-    class late_start
-
-#-HTC_RIL: from QCT Fusion
-
-service hdmid /system/bin/hdmid
-    class late_start
-    socket displayd stream 0660 root system graphics
-
-service htcbatt /system/bin/htcbatt
-    class late_start
+service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p19 NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblk0p20
+    class core
     user root
+
 service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
     user root
     group wifi inet
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
-    
+
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class main
     user system
     group system camera inet
 
-service thermald /system/bin/thermald
-    class main
-    user root
-    disabled
-
 on property:init.svc.bootanim=stopped
     start qcom-post-boot
-    start thermald
 
-service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
-    user root
-    disabled
-    oneshot
+on property:ro.hdmi.enable=true
+    start hdmid
 
-service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
-    user root
-    disabled
-    oneshot
-    ioprio idle 0
+on property:service.adb.root=1
+    write /sys/class/android_usb/android0/enable 0
+    restart adbd
+    write /sys/class/android_usb/android0/enable 1
 
-service tpd /sbin/tpd
-    user root
-
-service hciattach /system/bin/brcm_patchram_plus --no2bytes --enable_hci \
-    --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download \
-    --patchram /system/etc/firmware/BCM4330B1_002.001.003.0550.0568.hcd /dev/ttyHS0
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
+on property:sys.radio.shutdown=true
+    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
